<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_settings"
        android:title="@string/settings_title"
        android:icon="@drawable/ic_settings"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_help"
        android:title="@string/help_title"
        android:icon="@drawable/ic_help"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:orderInCategory="3"
        app:showAsAction="ifRoom"
        app:actionProviderClass="androidx.appcompat.widget.ShareActionProvider" />

</menu>