<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/joke_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joke_splash"
        android:layout_gravity="center_horizontal"
        android:textSize="56dp"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/instructions_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/instructions"
        android:textSize="20dp" />

    <Button
        android:id="@+id/laugh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/laugh_button"
        android:onClick="laughPressed" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/crying_laughing_emoji"/>

</LinearLayout>